# melman

./: .gitignore  README.md  WORKLOG.md  pyproject.toml
melman/: __init__.py  auth.py  cli.py  config.py  gmail_api.py  mailbox.py
